--- a/proyekPBO/nbproject/project.properties
+++ b/proyekPBO/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/proyekPBO
 excludes=
+file.reference.jcalendar-1.4.jar=D:\\Documents\\SMT IV\\PBO\\Project UAS\\jcalendar-1.4.jar
+file.reference.mysql-connector-j-8.0.33.jar=D:\\Documents\\SMT IV\\PBO PRAKTIKUM\\Minggu 11\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-j-8.0.33.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=proyekPBO
-main.class=main.ProyekPBO
+main.class=main.LoginFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
